// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ManyToMany Decorator should add metadata 1`] = `
{
  "columns": [
    {
      "decorator": "PrimaryKeyColumn",
      "enum": null,
      "fallback": [Function],
      "key": "id",
      "max": null,
      "min": null,
      "nullable": false,
      "optional": false,
      "readonly": true,
      "schema": null,
      "type": "uuid",
    },
  ],
  "entity": {
    "cache": null,
    "database": null,
    "decorator": "Entity",
    "name": null,
    "namespace": null,
  },
  "extras": [],
  "generated": [],
  "hooks": [],
  "indexes": [],
  "primaryKeys": [
    "id",
  ],
  "primarySource": null,
  "relations": [
    {
      "foreignConstructor": [Function],
      "foreignKey": "first",
      "key": "second",
      "options": {
        "joinKey": null,
        "joinTable": true,
        "loading": null,
        "nullable": false,
        "onDelete": null,
        "onOrphan": null,
        "onUpdate": null,
        "strategy": null,
      },
      "type": "ManyToMany",
    },
  ],
  "schemas": [],
}
`;

exports[`ManyToMany Decorator should add metadata 2`] = `
{
  "columns": [
    {
      "decorator": "PrimaryKeyColumn",
      "enum": null,
      "fallback": [Function],
      "key": "id",
      "max": null,
      "min": null,
      "nullable": false,
      "optional": false,
      "readonly": true,
      "schema": null,
      "type": "uuid",
    },
  ],
  "entity": {
    "cache": null,
    "database": null,
    "decorator": "Entity",
    "name": null,
    "namespace": null,
  },
  "extras": [],
  "generated": [],
  "hooks": [],
  "indexes": [],
  "primaryKeys": [
    "id",
  ],
  "primarySource": null,
  "relations": [
    {
      "foreignConstructor": [Function],
      "foreignKey": "second",
      "key": "first",
      "options": {
        "joinKey": null,
        "joinTable": false,
        "loading": null,
        "nullable": false,
        "onDelete": null,
        "onOrphan": null,
        "onUpdate": null,
        "strategy": null,
      },
      "type": "ManyToMany",
    },
  ],
  "schemas": [],
}
`;
